회원가입 페이지 -3

--- a/loginForm.html
+++ b/loginForm.html
@@ -44,17 +44,7 @@
         
         <form class="d-flex" role="search">
             <div class="nav_right">
-                <span 
-                style="margin-right: 8px;">
-                <a 
-                style="text-decoration: none;
-                    color: white;"
-                onmouseover="this.style.color='grey'"  
-                onmouseleave="this.style.color='white'"  
-                href="loginForm.html">
-                login
-            </a>
-        </span>
+                
         <span 
                 style="margin-right: 8px;">
                 <a 
@@ -86,10 +76,10 @@
               </div>
 
               <div class="input_box">
-                <input type="text">
+                <input type="text" placeholder="아이디" required>
               </div>
               <div  class="input_box">
-                <input type="password">
+                <input type="password" placeholder="비밀번호" required>
               </div>
 
               <div class="login_btn_content">
