메인페이지 -3

--- a/index.html
+++ b/index.html
@@ -169,23 +169,23 @@
 
 
             <div class="card card_margin col-lg-3 col-md-3 com-sm-12" style="width: 20rem;">
-                <img style="height: 270px; width: 100%;" src="" class="card-img-top">
+                <img style="height: 270px; width: 100%;" src="https://images.unsplash.com/photo-1571474004502-c1def214ac6d?q=80&w=2831&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top">
                 <div class="card-body">
-                <p class="card-text"></p>
+                <p class="card-text">대만 - 지우펀</p>
                 </div>
             </div>
 
             <div class="card card_margin col-lg-3 col-md-3 com-sm-12" style="width: 20rem;">
-                <img style="height: 270px; width: 100%;" src="" class="card-img-top">
+                <img style="height: 270px; width: 100%;" src="https://images.unsplash.com/photo-1575538439014-1b8bc5fcaa1d?q=80&w=2787&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top">
                 <div class="card-body">
-                <p class="card-text"></p>
+                <p class="card-text">아랍에미리트 - 두바이 ( Dubai )</p>
                 </div>
             </div>
 
             <div class="card card_margin col-lg-3 col-md-3 com-sm-12" style="width: 20rem;">
-                <img style="height: 270px; width: 100%;" src="" class="card-img-top">
+                <img style="height: 270px; width: 100%;" src="https://images.unsplash.com/photo-1431274172761-fca41d930114?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top">
                 <div class="card-body">
-                <p class="card-text"></p>
+                <p class="card-text">프랑스 - 파리 ( Paris )</p>
                 </div>
             </div>
 
