--- a/loginForm.html
+++ b/loginForm.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg" style="background-color: #00276c; color: white;">
+  <nav class="navbar navbar-expand-sm navbar-toggler navbar-expand-lg" style="background-color: #00276c; color: white;">
     <div class="container-fluid" >
       <a class="navbar-brand" style="color: white;" href="index.html">Home</a>
       
